tooling/nargo_cli/tests/snapshots/execution_success/array_dedup_regression/execute__tests__force_brillig_false_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[0x80, 0x02, 0x03, 0x04, 0x05]
[0x01, 0x80, 0x03, 0x04, 0x05]
[0x01, 0x02, 0x80, 0x04, 0x05]
[0x01, 0x02, 0x03, 0x80, 0x05]
[0x01, 0x02, 0x03, 0x04, 0x80]
----- stderr -----
