tooling/nargo_cli/tests/snapshots/execution_success/array_dedup_regression/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32):
    (no terminator instruction)
}
[0x80, 0x02, 0x03, 0x04, 0x05]
[0x01, 0x80, 0x03, 0x04, 0x05]
[0x01, 0x02, 0x80, 0x04, 0x05]
[0x01, 0x02, 0x03, 0x80, 0x05]
[0x01, 0x02, 0x03, 0x04, 0x80]
